snapshots/stoat/tui/stoat__test_harness__chat_replay_streamed_text_then_final_and_result_step_05_result.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 80x24
---
[0m[90mClaude[0m











[0m[97m| Directory | Primary Language |[0m
[0m[97m|---|---|[0m
[0m[97m| `action/` | Rust |[0m
[0m[97m| `agent/` | Rust |[0m
[0m[97m| `vendor/` | (vendor deps) |[0m
[0m[97m| `viewport/` | Rust |[0m

[0m[90m--------------------------------------------------------------------------------[0m
[0m[37m  58.3s[0m
[0m[90m--------------------------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[claude]                                                        [0m
