snapshots/stoat/tui/stoat__test_harness__command_palette_filter_narrows_to_one.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: t
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[7m [0m







  [0m[35m┌ command palette ─────────────────────────────────────────────────────────┐[0m
  [0m[35m│[0m[33m:[0m [0m[97mquit[0m[30m[107m [0m                                                                   [0m[35m│[0m
  [0m[35m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[35m│[0m
  [0m[35m│[0m[30m[46m Quit  exit stoat                                                         [0m[35m│[0m
  [0m[35m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[35m│[0m
  [0m[35m│[0m[37mExit the application, closing all panes and viewports.[0m                    [0m[35m│[0m
  [0m[35m└──────────────────────────────────────────────────────────────────────────┘[0m








[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                   1:1 [0m
