snapshots/stoat/tui/stoat__test_harness__command_palette_filter_typing.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: c
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[7m [0m





  [0m[35m┌ command palette ─────────────────────────────────────────────────────────┐[0m
  [0m[35m│[0m[33m:[0m [0m[97mFoc[0m[30m[107m [0m                                                                    [0m[35m│[0m
  [0m[35m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[35m│[0m
  [0m[35m│[0m[30m[46m FocusDown   focus pane down                                              [0m[35m│[0m
  [0m[35m│[0m[97m FocusLeft   [0m[90mfocus pane left[0m[97m                                              [0m[35m│[0m
  [0m[35m│[0m[97m FocusNext   [0m[90mfocus next pane[0m[97m                                              [0m[35m│[0m
  [0m[35m│[0m[97m FocusPrev   [0m[90mfocus previous pane[0m[97m                                          [0m[35m│[0m
  [0m[35m│[0m[97m FocusRight  [0m[90mfocus pane right[0m[97m                                             [0m[35m│[0m
  [0m[35m│[0m[97m FocusUp     [0m[90mfocus pane up[0m[97m                                                [0m[35m│[0m
  [0m[35m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[35m│[0m
  [0m[35m│[0m[37mMove focus to the pane below the current pane.[0m                            [0m[35m│[0m
  [0m[35m└──────────────────────────────────────────────────────────────────────────┘[0m





[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                   1:1 [0m
